[fix] image deatils view: vertical overflow in results.image-detail-open
overflow-y: scroll
  If the information on the image exceeds the visible area in the detail view,
  there must be a way to access this information via scroll.

max-height: -17rem versus 7rem
  There are new fields in the lower area, so the height of the image (top) must
  be reduced

--- a/client/simple/src/less/detail.less
+++ b/client/simple/src/less/detail.less
@@ -24,6 +24,7 @@ article.result-images .detail {
   border: 1px solid var(--color-result-detail-background);
   z-index: 1000;
   padding: 4rem 3rem 3rem 3rem;
+  overflow-y: scroll;
 
   a.result-images-source {
     display: block;
@@ -42,7 +43,7 @@ article.result-images .detail {
       height: inherit;
       max-width: 100%;
       min-height: inherit;
-      max-height: calc(100vh - 25rem - 7rem);
+      max-height: calc(100vh - 25rem - 17rem);
       background: inherit;
     }
   }
